# simple-utils

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: duckdb.md  iceberg.md
src/simple_utils/: __init__.py  _version.py  file_utils.py
src/simple_utils/platform/: duckdb.ipynb
src/simple_utils/storage/: __init__.py  iceberg.py
src/simple_utils/utils/: datetime_utils.py  decorators.py  file_utils.py  string_utils.py
src/storage/: object_storage.py
tests/: test_datetime_utils.py  test_decorators.py  test_file_utils.py  test_string_utils.py
