[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-utils"
version = "0.1.0"
description = "A collection of simple Python utilities for datetime, string, file, and decorator operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "da-huin", email = "dahuin000@gmail.com" }
]
keywords = ["utils", "utilities", "datetime", "string", "file", "decorator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/i-tems/simple-utils"
Repository = "https://github.com/i-tems/simple-utils"
Issues = "https://github.com/i-tems/simple-utils/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simple_utils"]
